--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar [color]="'primary'">
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
@@ -12,8 +12,8 @@
 <ion-content>
   <ion-grid>
     <ion-row>
-      <ion-col size="6" *ngFor="let page of pages">
-        <ion-button menu_button expand="block" icon-right-big color="secondary"
+      <ion-col [size]="6" *ngFor="let page of pages">
+        <ion-button menu_button [expand]="'block'" icon-right-big [color]="'secondary'"
                     [routerLink]="page.url" routerDirection="forward">
           <ion-label text-wrap>{{page.title | translate}}</ion-label>
           <ion-icon [name]="page.icon"></ion-icon>
