--- a/src/global.scss
+++ b/src/global.scss
@@ -10,3 +10,14 @@
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
 
+ion-item[item-center] {
+  text-align: center;
+}
+
+ion-icon[flow-visible] {
+  line-height: 20px;
+}
+
+ion-card-header[background-tertiary] {
+  background-color: var(--ion-color-tertiary);
+}
