--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,24 +1,3 @@
 <ion-app>
-  <ion-split-pane>
-    <ion-menu>
-      <ion-header>
-        <ion-toolbar>
-          <ion-title>Menu</ion-title>
-        </ion-toolbar>
-      </ion-header>
-      <ion-content>
-        <ion-list>
-          <ion-menu-toggle auto-hide="false" *ngFor="let page of pages">
-            <ion-item [routerDirection]="'root'" [routerLink]="[page.url]">
-              <ion-icon slot="start" [name]="page.icon"></ion-icon>
-              <ion-label>
-                {{page.title | translate}}
-              </ion-label>
-            </ion-item>
-          </ion-menu-toggle>
-        </ion-list>
-      </ion-content>
-    </ion-menu>
-    <ion-router-outlet main></ion-router-outlet>
-  </ion-split-pane>
+  <ion-router-outlet></ion-router-outlet>
 </ion-app>
