--- a/src/app/pages/details/details.page.html
+++ b/src/app/pages/details/details.page.html
@@ -18,18 +18,21 @@
       </ion-label>
     </ion-list-header>
 
-    <ion-item text-wrap [lines]="'none'">
+    <ion-item *ngFor="let day of routine.days" text-wrap [lines]="'none'">
       <ion-icon name="calendar" slot="start"></ion-icon>
-      <p text-wrap *ngFor="let day of routine.days">{{day}}</p>
+      <ion-label text-wrap>{{day}}</ion-label>
     </ion-item>
 
     <ion-card margin-bottom *ngFor="let exercise of routine.exercises">
-      <ion-card-header text-wrap background-tertiary>
-        <span float-start>{{exercise.name}}</span>
-        <span float-end *ngIf="exercise.weight && exercise.weight > 0">
-          <ion-icon [name]="'md-speedometer'" flow-visible slot="start"></ion-icon>
-          +{{exercise.weight}}kg
-        </span>
+      <ion-card-header text-wrap no-padding>
+        <ion-item color="tertiary">
+          <ion-label [slot]="'start'">{{exercise.name}}</ion-label>
+
+          <span [slot]="'end'" *ngIf="exercise.weight && exercise.weight > 0">
+            <ion-icon [name]="'md-speedometer'" flow-visible slot="start"></ion-icon>
+            +{{exercise.weight}}kg
+          </span>
+        </ion-item>
       </ion-card-header>
 
       <ion-item [lines]="'none'">
